tests/snapshots/integration__circular_type_only_detection.snap
---
source: tests/integration.rs
assertion_line: 1674
expression: cycles
---
[
    "src/a.ts → src/b.ts → src/a.ts",
]
