tests/snapshots/integration__comments_in_imports_detection.snap
---
source: tests/integration.rs
assertion_line: 2077
expression: cycles
---
[
    "src/b.ts → src/main.ts → src/b.ts",
]
