tests/snapshots/integration__deep_nesting_cycle_detection.snap
---
source: tests/integration.rs
assertion_line: 1303
expression: cycles
---
[
    "src/level1/a.ts → src/level1/level2/b.ts → src/level1/level2/level3/c.ts → src/level1/a.ts",
]
