tests/snapshots/integration__default_exports_cycle_detection.snap
---
source: tests/integration.rs
assertion_line: 1842
expression: cycles
---
[
    "src/a.ts → src/b.ts → src/a.ts",
]
