tests/snapshots/integration__dynamic_cycle_detects_dynamic_imports.snap
---
source: tests/integration.rs
assertion_line: 782
expression: imports
---
[
    (
        "src/a.ts",
        "./b",
    ),
    (
        "src/b.ts",
        "./a",
    ),
]
