tests/snapshots/integration__fixture_complex_cycles.snap
---
source: crates/jscycles/tests/integration.rs
assertion_line: 67
expression: cycles
---
[
    "src/a.ts → src/b.ts → src/c.ts → src/a.ts",
    "src/d.ts → src/e.ts → src/d.ts",
]
