tests/snapshots/integration__fixture_dynamic_import_cycle.snap
---
source: crates/jscycles/tests/integration.rs
assertion_line: 243
expression: cycles
---
[
    "src/a.ts → src/b.ts → src/a.ts",
]
